--- a/style.css
+++ b/style.css
@@ -3,3 +3,21 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 { 
+  text-align:center;
+}
+
+img {
+  display:block;
+  margin-left: auto;
+  margin-right: auto
+}
+
+nav a {
+ background-color: green;
+ text-align: center;
+ padding-right: 10px;
+ padding-left: 10px;
+ 
+}
