--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ img {
   margin-right: auto
 }
 
+nav {
+display:block;
+text-align: center;
+}
+
 nav a {
  background-color: green;
  text-align: center;
