--- a/style.css
+++ b/style.css
@@ -15,15 +15,19 @@ img {
 }
 
 nav {
-display:block;
-text-align: center;
+  display:block;
+  text-align: center;
 }
 
 nav a {
- background-color: green;
- text-align: center;
- padding-right: 10px;
- padding-left: 10px;
+  background-color: green;
+  text-align: center;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
+figcaption {
+  font-size: 
+  
+}
 
