--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ figcaption {
 
 #featured-property {
   display: block;
-  margin-left auto
-  margin-right: a;
+  margin-left:auto;
+  margin-right: auto;
   
 }
 
