--- a/style.css
+++ b/style.css
@@ -32,14 +32,8 @@ figcaption {
   font-size: small;
 }
 
-#featured-property {
-  display: block;
-  margin-left:auto;
-  margin-right: auto;
-  
-}
-
 #featured-property p {
   width: 800px;
+  text-align: center
 }
 
