--- a/style.css
+++ b/style.css
@@ -32,6 +32,11 @@ figcaption {
   font-size: small;
 }
 
+#featured-property {
+  display: block;
+  text-align: center;
+}
+
 #featured-property p {
   width: 800px;
 }
