Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -32,13 +32,9 @@ figcaption {
   font-size: small;
 }
 
-#featured-property {
-  display: block;
-  text-align: center;
-}
-
 #featured-property p {
   width: 800px;
+  text-align: right
 }
 
 
