--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ figcaption {
 #featured-property p {
   width: 800px;
   text-align: center;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 
