--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ figcaption {
 #featured-property p {
   width: 800px;
   text-align: center;
-  justify: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
