--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ figcaption {
 
 #details div { 
   float: left;
+  background-color: green;
+  margin-right: auto;
+  margin-left: auto;
+  width: ;
 }
 
 
