--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ figcaption {
   background-color: green;
   margin-right: auto;
   margin-left: auto;
-  width: 200px ;
+  text-align: center ;
 }
 
 
