--- a/style.css
+++ b/style.css
@@ -41,8 +41,7 @@ figcaption {
 
 #details {
   display: block;
-  margin-right: auto;
-  margin-left: auto;
+text-align: center
 }
 
 #details div { 
